--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset='utf-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1' />
   <title>Balatro Run Tracker</title>
-  <style>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#111111">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <style>
+
     *, *::before, *::after {
    box-sizing: border-box;
 }
@@ -1155,14 +1156,14 @@ jokerModalAdd.addEventListener('click', () => {
   // -----------------------------
   // 8) Initial render
   // -----------------------------
- renderSelectedJokers();
+renderSelectedJokers();
 renderJokerPicker();
-  renderRunsTable();
-  if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('./sw.js').catch(console.error);
-  });
-}
+renderRunsTable();
+navigator.serviceWorker.register('./sw.js')
+  .then(reg => console.log('SW registered:', reg.scope))
+  .catch(err => console.error('SW registration failed:', err));
+
 </script>
 </body>
 </html>
+
