--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 18px;   background: var(--bg);  color: var(--text); }
     h1 { margin: 0 0 10px 0; font-size: 22px; }
     .grid { display: grid; grid-template-columns: 560px 1fr; gap: 16px; align-items: start; }
-    .card { border: 1px solid var(--border); border-radius: 10px; padding: 12px; }
+    .card { border: 1px solid var(--border); border-radius: 10px; padding: 12px;background: var(--panel); border-color: var(--border); }
     .row { display: grid; grid-template-columns: 120px 1fr; gap: 10px; margin: 8px 0; align-items: center; }
     label { color: var(--muted); font-size: 12px; }
-    input[type='date'], input[type='text'], select { width: 100%; padding: 8px; border: 1px solid var(--border); border-radius: 8px; }
+    input[type='date'], input[type='text'], select { width: 100%; padding: 8px; border: 1px solid var(--border); border-radius: 8px;  background: var(--panel2);  color: var(--text);  border-color: var(--border); }
     button { padding: 9px 12px; border: 1px solid var(--border); border-radius: 10px; cursor: pointer; background: #fff; }
     button.primary { background: #111; color: #fff; border-color: #111; }
     button.danger { border-color: #d33; color: #d33; }
@@ -1194,6 +1194,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
