--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 
   border: 1px solid var(--border);
   border-radius: 10px;
-  background: #fafafa;
+   background: #0b0c0e;
+  border-color: var(--border);
 }
 
 /* --- Sticker overlay (reusable) --- */
@@ -1197,6 +1198,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
