--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     table { width: 100%; border-collapse: collapse; background: transparent; }
     th, td { border-bottom: 1px solid var(--border); padding: 10px; vertical-align: top;border-bottom-color: var(--border); }
     th { text-align: left; font-size: 12px; color: var(--muted); font-weight: 600;color: var(--muted); }
-    .thumb { width: 40px; height: 40px; object-fit: contain; border: 1px solid var(--border); border-radius: 8px; background: #fafafa;   background: #0b0c0e;
-  border-color: var(--border);}
+    .thumb { width: 40px; height: 40px; object-fit: contain; border: 1px solid var(--border); border-radius: 8px;  background: transparent;   border-color: var(--border);}
     .pill { display: inline-flex; align-items: flex-start; gap: 8px; border: 1px solid var(--border); border-radius: 999px; padding: 6px 10px 6px 6px; margin: 3px 6px 3px 0; background: #fff; }
     .pill span { font-size: 12px; }
     .deckCell { display: inline-flex; align-items: center; gap: 10px; }
@@ -162,7 +161,7 @@
 
   border: 1px solid var(--border);
   border-radius: 10px;
-   background: #0b0c0e;
+  background: transparent;   /* was white */
   border-color: var(--border);
 }
 
@@ -1198,6 +1197,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
