--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   gap: 6px;
  background: var(--panel2);
   border-color: var(--border);
-  padding: 8px 6px;
+  padding: 6px 4px;
   border: 1px solid var(--border);
   border-radius: 10px;
   background: #fff;
@@ -134,12 +134,13 @@
 }
 .jokerBtn .thumb {
   display: block;
-  width: 50px;
-  height: 70px;
+  width: 44px;
+  height: 62px;
   object-fit: contain;
   border: 1px solid var(--border);
   border-radius: 8px;
   background: #fafafa;
+    border-width: 1px; 
 }
 
 .jokerBtn .name {
@@ -1197,6 +1198,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
