--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   object-fit: contain;
   border: 1px solid var(--border);
   border-radius: 8px;
-  background: #fafafa;
+  background:  transparent;
     border-width: 1px; 
 }
 
@@ -1198,6 +1198,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
