--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   padding: 6px;
   border: 1px solid var(--border);
   border-radius: 10px;
-  background: #fff;
+  background: var(--panel2);;
 
   width: 100px; /* controls wrapping consistency */
 }
@@ -108,7 +108,7 @@
   padding: 6px 4px;
   border: 1px solid var(--border);
   border-radius: 10px;
-  background: #fff;
+
   cursor: pointer;
 
   overflow: hidden; /* prevents name bleed */
@@ -1198,6 +1198,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
