--- a/index.html
+++ b/index.html
@@ -434,7 +434,9 @@ align-items: center;
     -webkit-overflow-scrolling: touch;
   }
 }
-
+#runEditor.isHidden{
+  display: none;
+}
   </style>
 </head>
 <body>
@@ -482,28 +484,48 @@ align-items: center;
       </div>
     </div>
 
-    <div class='card'>
-      <div class='toolbar'>
-        <input class='search' id='tableFilter' type='text' placeholder='Search runs (deck/jokers/date)...' />
-        <button class='danger' id='clearAllBtn'>Clear All</button>
-      </div>
-      <div class='small' id='statsLine' style='margin: 8px 0 0;'></div>
+<div class='card'>
+  <div class='toolbar' style='margin-bottom:10px;'>
+    <button id='toggleEditorBtn'>Show Run Editor</button>
+  </div>
 
-      <table>
-        <thead>
-          <tr>
-            <th style='width:70px;'>Run</th>
-            <th style='width:120px;'>Date</th>
-            <th>Jokers</th>
-            <th style='width:220px;'>Deck</th>
-            <th style='width:160px;'>Actions</th>
-           
-          </tr>
-        </thead>
-        <tbody id='runsTbody'></tbody>
-      </table>
+  <div id='runEditor'>
+    <!-- Date -->
+    <div class='row'>
+      <label for='runDate'>Date</label>
+      <input id='runDate' type='date' />
+    </div>
+
+    <!-- Deck -->
+    <div class='row' style='align-items:start;'>
+      <label for='deckSelect'>Deck</label>
+      <div>
+        <select id='deckSelect'></select>
+        <div id='deckPreview' class='hint'></div>
+      </div>
+    </div>
+
+    <!-- Selected Jokers -->
+    <div class='row'>
+      <label>Selected Jokers</label>
+      <div class='selectedBox' id='selectedJokers'></div>
+    </div>
+
+    <!-- Picker -->
+    <div class='row' style='align-items:start;'>
+      <label>Pick Jokers</label>
+      <div>
+        <input id='jokerFilter' type='text' placeholder='Search Jokers' />
+        <div class='jokerPicker' id='jokerPicker'></div>
+      </div>
+    </div>
+
+    <div class='toolbar'>
+      <button class='primary' id='addRunBtn'>Add Run</button>
     </div>
   </div>
+</div>
+
 
 
 
@@ -1291,6 +1313,26 @@ jokerModalAdd.addEventListener('click', () => {
   closeJokerModal();
   renderSelectedJokers();
 });
+// -----------------------------
+// Collapsible Run Editor
+// -----------------------------
+const toggleEditorBtn = document.getElementById('toggleEditorBtn');
+const runEditor = document.getElementById('runEditor');
+
+function setEditorOpen(isOpen){
+  if (!runEditor) return;
+
+  runEditor.classList.toggle('isHidden', !isOpen);
+  if (toggleEditorBtn) toggleEditorBtn.textContent = isOpen ? 'Hide Run Editor' : 'Show Run Editor';
+}
+
+// Default: collapsed on small screens, open on desktop
+setEditorOpen(window.matchMedia('(max-width: 820px)').matches ? false : true);
+
+toggleEditorBtn?.addEventListener('click', () => {
+  const isHidden = runEditor.classList.contains('isHidden');
+  setEditorOpen(isHidden); // if hidden -> open
+});
 
 
   // -----------------------------
@@ -1306,6 +1348,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
