--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ align-items: center;
     </div>
 
     <div class='toolbar'>
-      <button class='primary' id='addRunBtn'>toggle</button>
+      <button class='primary' id='addRunBtn'>Add Run</button>
       <button id='exportBtn'>Export JSON</button>
       <button id='importBtn'>Import JSON</button>
       <input id='importFile' type='file' accept='application/json' style='display:none;' />
@@ -1341,6 +1341,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
