--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ align-items: center;
       <label>Pick Jokers</label>
       <div>
         <input id='jokerFilter' type='text' placeholder='Search Jokers' />
-        <div class='hint'>Click a joker to add. Click a selected joker pill to remove.</div>
+        <div class='hint'>Click a joker to add.</div>
         <div class='jokerPicker' id='jokerPicker'></div>
       </div>
     </div>
@@ -496,9 +496,7 @@ align-items: center;
       <input id='importFile' type='file' accept='application/json' style='display:none;' />
     </div>
 
-    <div class='hint'>
-      Data is stored locally in your browser (offline). Export/import lets you back it up or move machines.
-    </div>
+
 
   </div> <!-- /#runEditor -->
 </div>
@@ -1349,6 +1347,7 @@ navigator.serviceWorker.register('./sw.js')
 </script>
 </body>
 </html>
+
 
 
 
